--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~52.0.38",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~16.0.18",
+    "expo-linear-gradient": "^14.0.2",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
