--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
+    "@react-navigation/native-stack": "^7.3.1",
     "@react-navigation/stack": "^7.1.2",
     "expo": "~52.0.38",
     "expo-barcode-scanner": "^13.0.1",
@@ -24,12 +25,15 @@
     "react-native-gesture-handler": "^2.24.0",
     "react-native-maps": "^1.20.1",
     "react-native-paper": "^5.13.1",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
     "react-native-svg": "^15.11.2",
     "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
