--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-screens": "^4.9.2",
     "react-native-svg": "^15.11.2",
     "react-native-swiper": "^1.6.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
