--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.76.7",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-maps": "^1.20.1",
+    "react-native-masonry-list": "^2.16.2",
     "react-native-paper": "^5.13.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "^3.17.1",
