--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~16.0.18",
     "expo-linear-gradient": "^14.0.2",
+    "expo-location": "^18.0.8",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-maps": "^1.20.1",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-masonry-list": "^2.16.2",
     "react-native-paper": "^5.13.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.11.2",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.2.1",
