--- a/package.json
+++ b/package.json
@@ -15,23 +15,23 @@
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.3.1",
     "@react-navigation/stack": "^7.1.2",
-    "expo": "~52.0.38",
+    "expo": "^53.0.9",
     "expo-barcode-scanner": "^13.0.1",
-    "expo-camera": "~16.0.18",
-    "expo-linear-gradient": "^14.0.2",
-    "expo-location": "^18.0.8",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.7",
+    "expo-camera": "~16.1.6",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-location": "~18.1.5",
+    "expo-status-bar": "~2.2.3",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-maps": "^1.20.1",
     "react-native-maps-directions": "^1.9.0",
     "react-native-masonry-list": "^2.16.2",
     "react-native-paper": "^5.13.1",
     "react-native-qrcode-svg": "^6.3.15",
-    "react-native-reanimated": "^3.17.1",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.2",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.11.2",
     "react-native-swiper": "^1.6.0",
