--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "IntroduceApp",
-    "slug": "IntroduceApp",
+    "name": "Ecocoin",
+    "slug": "Ecocoin",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
